crates/sui-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/sui-swarm-config/tests/snapshot_tests.rs
expression: genesis.sui_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 104
system_state_version: 1
supper_committee:
  proposal_list: []
  extra_fields:
    id:
      id: "0xb805e2fb47c89354afee0523f4eea2039c04eab3178f42aad5c79ae06c8cb8f4"
    size: 0
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        sui_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0xb6a39e3edd8915e7f0d211ca531e51009a3891df3e8d99a87818128ca603fc60"
          size: 0
      revenue_receiving_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
      only_validator_staking: true
      voting_power: 10000
      operation_cap_id: "0x53649ab96816185cc71dcfb17e31aefb13482807fc484c666f045b345556b104"
      gas_price: 1000
      staking_pool:
        id: "0x8d02f487c9d97e09236b6202eb54ed69ff06f5d8080059ca30a1ab27b89a4ba1"
        activation_epoch: 0
        deactivation_epoch: ~
        oct_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0x37daee8dff106eb0db87a8a4f8c5bb5e6ffc8f005d9a02818cd516011ce13cc2"
          size: 1
        pending_stake: 0
        pending_total_oct_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x5d6a2f06b17e8db4710c5c72c42b87447ee33150e2fda9c1546bab9141a43366"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x61f52ff7fa68f19cf4beabc9e35ecd6be23c878a119d7b603b455dc71b6cc4ab"
        size: 0
  pending_active_validators:
    contents:
      id: "0xdfc04e7a78a77352297ca3636ec77053fca9cca1926d466d923675db352cf031"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xde21b4924c5f492aa99926371eafaad0d0cab229be04c583445f121a67cf2172"
    size: 1
  inactive_validators:
    id: "0x63cb829f74cc57bd423b45e447d5c40ba8791f0a8f38da1c47c416796cf9e1c4"
    size: 0
  validator_candidates:
    id: "0x833905fb7605a999f6b0057e314d44f9177ec00a30f8b48f571242d43b39f761"
    size: 0
  at_risk_validators:
    contents: []
  only_trusted_validator: true
  trusted_validators:
    contents:
      - "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
  extra_fields:
    id:
      id: "0x9a063a998fd68a680ad3cbed05c0227356ceb7083f3cb50661c75ec3794ae085"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0xba89482a877f6ed16e6bda3df7b451958218eb4a08eb26af98ec3770098315f8"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  extra_fields:
    id:
      id: "0x998ad364b2f3170390a453bef923dc6439b7d7e812360f3ce17979859cabfdc6"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x97c16f1ed5b455cdf0bbe0564b46bc5c90eb032d2add5312bbb561132ebffbd7"
  size: 0
